--- a/react-app/src/components/Filter/Filter.css
+++ b/react-app/src/components/Filter/Filter.css
@@ -13,11 +13,12 @@ form input{
     border: 2px solid #d7d7d7;
     margin: 0 8px 20px 8px;
 }
-form button{
+form .button{
     background: #8b658d;
     color: white;
     padding: 16px;
     border-radius: 5px;
     border: 0;
     font-size: 20px;
+    cursor:pointer;
 }
